test/libsolidity/syntaxTests/structs/global_structs_name_clash.sol
struct S { uint256 a; }
struct S { uint256 a; }
// ----
// DeclarationError 2333: (24-47): Identifier already declared.
